--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,27 @@ h1 {
 	text-align:center;
 	}
 p {
-	color:grey;
+	color:green;
 	text-align: center;
 	}
+#top {
+	background-color: teal;
+	width: 100%;
+	height: 70%;
+	margin:5%;
+	padding:5%;
+	font-family:Arial,sans-serif;
+	font-size:12px;
+	border: 3px dashed grey;
+}
+
+#middle {
+	background-color:lightgrey;
+	width:100%;
+	font-family:Arial,sans-serif;
+	font-size:10px;
+}
+
+.bold {
+	font-weight:bold;
+}
